Added Nether and Farmworld command Added SubCommands Added configurable Join and Quit message Updated PlotSquared to v6
Took 3 hours 23 minutes